--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
   <title>Todo app with LocalStorage</title>
 </head>
 
-<body class="p-5 bg-blue-200 flex justify-center items-center h-screen">
-  <div class="w-full max-w-xl">
-    <div class="bg-white w-full rounded-md flex gap-4 overflow-hidden border-2 border-purple-400">
-      <input type="text" id="todo-text" class="w-full p-4 outline-none" placeholder="Type Title ..." />
-      <button onclick="handleSubmit()" title="Add Todo">
-        <i class="fa-solid fa-square-plus text-[30px] text-purple-400"></i>
-      </button>
-      <button onclick="handleClearAll()" title="Clear All" class="mr-4">
-        <i class="fa-solid fa-square-minus text-[30px] text-red-400"></i>
-      </button>
-    </div>
-    <div class="bg-white mt-4 rounded-md border-2 border-purple-400 p-4">
-      <ul id="todo-list" class="grid divide-y"></ul>
+<body class="p-5 bg-blue-200 text-center">
+
+  <div class="flex justify-center items-center h-screen">
+    <div class="w-full max-w-xl">
+      <h2 class="text-4xl font-bold mb-8">Add To List</h2>
+      <div class="bg-white w-full rounded-md flex gap-4 overflow-hidden border-2 border-purple-400">
+        <input type="text" id="todo-text" class="w-full p-4 outline-none" placeholder="Type Title ..." />
+        <button title="Add to list" onclick="handleSubmit()" title="Add Todo">
+          <i class="fa-solid fa-square-plus text-[30px] text-purple-400"></i>
+        </button>
+        <button title="Clear All list" onclick="handleClearAll()" title="Clear All" class="mr-4">
+          <i class="fa-solid fa-square-minus text-[30px] text-red-400"></i>
+        </button>
+      </div>
+      <div class="bg-white mt-4 rounded-md border-2 border-purple-400 p-4">
+        <ul id="todo-list" class="grid divide-y"></ul>
+      </div>
     </div>
   </div>
   <script src="script.js"></script>
